<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_jtomos_new"
    tools:context="com.olympindo.spvolympindo.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="40dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_jtodis_24"
                android:layout_centerHorizontal="true"/>

            <RelativeLayout
                android:id="@+id/username_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/bg"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/image_logo">

                <ImageView
                    android:id="@+id/image_username"
                    android:layout_width="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="30dp"
                    android:tint="@color/indigo"
                    android:src="@drawable/icon_username_login"/>

                <EditText
                    android:id="@+id/et_username_login"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@+id/image_username"
                    android:background="@drawable/bg"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/username"></EditText>

            </RelativeLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/bg"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/username_box"
                android:id="@+id/passsword_box">

                <ImageView
                    android:id="@+id/image_password"
                    android:layout_width="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="30dp"
                    android:tint="@color/indigo"
                    android:src="@drawable/icon_password_login"/>

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:background="@drawable/bg"
                    android:inputType="textPassword"
                    android:layout_toRightOf="@+id/image_password"
                    android:layout_toLeftOf="@+id/tampil_password"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionGo"></EditText>

                <ImageView
                    android:background="@drawable/bg_password"
                    android:layout_alignParentRight="true"
                    android:id="@+id/tampil_password"
                    android:layout_width="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="30dp"
                    android:tint="@color/indigo"
                    android:src="@drawable/ic_visib_off"/>

            </RelativeLayout>




            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/masuk_login"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:background="@drawable/bg2"
                android:layout_below="@id/passsword_box"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>